completed config processor

--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,11 @@
             <artifactId>jeromq</artifactId>
             <version>0.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.30</version>
+        </dependency>
+
     </dependencies>
 </project>
